# ompi

ompi/communicator/: communicator.h
ompi/communicator/ft/: comm_ft_revoke.c
ompi/datatype/: ompi_datatype.h  ompi_datatype_create_pair.c  ompi_datatype_internal.h
ompi/errhandler/: errhandler.c  errhandler_invoke.c
ompi/group/: group.c
ompi/include/: mpi.h.in
ompi/mca/coll/adapt/: coll_adapt.h  coll_adapt_context.h  (+3 more)
ompi/mca/op/: op.h
ompi/mca/osc/: osc.h
ompi/mpi/c/: Makefile.am  continue.c  continue_init.c  continue_try.c  continue_waitall.c  continue_waitsome.c  continueall.c  continueany.c  irecv.c  isend.c  memhandle_create.c  memhandle_release.c  progress.c  recv.c  request_on_completion.c  send.c  start.c  startall.c  test.c  testall.c  testany.c  testsome.c  type_create_pair.c  win_from_memhandle.c
ompi/op/: op.c
ompi/request/: Makefile.am  req_test.c  req_wait.c  request.c  request.h  request_cb.c  request_cb.h  request_dbg.h
ompi/runtime/: ompi_spc.c  ompi_spc.h
ompi/win/: win.c  win.h
opal/include/: opal_stdatomic.h
opal/mca/accelerator/: accelerator.h
opal/mca/shmem/: shmem_types.h
opal/mca/threads/: configure.m4  mutex.h  tsd.h  wait_sync.h
opal/mca/threads/byos/: Makefile.am  configure.m4  threads_byos.h  threads_byos_component.c  threads_byos_condition.c  threads_byos_module.c  threads_byos_mutex.c  threads_byos_mutex.h  threads_byos_threads.h  threads_byos_tsd.h  threads_byos_yield.c
opal/runtime/: opal_progress.c  opal_progress.h
opal/util/: help-opal-util.txt  path.c  path.h  sys_limits.c  sys_limits.h
(+68 files in other folders)
