#
# Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2021 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart,
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2008      Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2019      Sandia National Laboratories.  All rights reserved.
# Copyright (c) 2021      Argonne National Laboratory.  All rights reserved.
#
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

noinst_LTLIBRARIES = libmca_threads_byos.la

libmca_threads_byos_la_SOURCES = \
    threads_byos_component.c \
    threads_byos_condition.c \
    threads_byos_module.c \
    threads_byos_mutex.h \
    threads_byos_mutex.c \
    threads_byos_threads.h \
    threads_byos_tsd.h \
    threads_byos_yield.c \
    threads_byos.h
